# go-ordering/docs/swagger.yaml
@@ -1,5 +1,66 @@
 definitions:
-  controller.Controller:
+  controller.Menu:
+    properties:
+      category:
+        description: 메뉴 카테고리
+        type: string
+      countryOf:
+        description: 원산지
+        type: string
+      isDisabled:
+        description: 판매여부
+        type: boolean
+      maxCount:
+        description: 판매 가능 갯수
+        type: integer
+      menuName:
+        description: 메뉴 이름
+        type: string
+      popularity:
+        description: 인기도
+        type: integer
+      price:
+        description: 가격
+        type: integer
+      sellerName:
+        description: MenuID     string             `bson:"menuID"`     //메뉴 ID
+        type: string
+      spicy:
+        description: 맵기
+        type: string
+      status:
+        description: 주문 가능 상태
+        type: string
+      todayMenu:
+        description: 오늘의 추천메뉴 여부
+        type: boolean
+    type: object
+  controller.OrdererMenuLink:
+    properties:
+      menuName:
+        description: 메뉴이름
+        type: string
+      orderComment:
+        description: 후기
+        type: string
+      orderNo:
+        description: 주문번호
+        type: string
+      orderStarGrade:
+        description: 평점
+        type: integer
+      orderStatus:
+        description: 주문상태
+        type: string
+      ordererAddress:
+        description: 주문자 주소
+        type: string
+      ordererID:
+        description: 주문자ID
+        type: integer
+      ordererPhone:
+        description: 주문자 폰번호
+        type: integer
     type: object
 info:
   contact: {}
@@ -11,20 +72,43 @@ paths:
     post:
       consumes:
       - application/json
-      description: ChangeOrder 주문 변경 - 주문자
+      description: ChangeOrder 주문 변경 - 주문자 (수정/취소)
       parameters:
-      - description: User name
+      - description: 메뉴이름
         in: path
-        name: name
+        name: MenuName
         required: true
         type: string
+      - description: 주문자 ID
+        in: path
+        name: OrdererID
+        required: true
+        type: string
+      - description: 주문 상태
+        enum:
+        - 준비중
+        - 주문취소
+        - 배달중
+        - 배달완료
+        in: path
+        name: OrderStatus
+        required: true
+        type: string
+      - description: 주문자 주소
+        in: path
+        name: OrdererAddress
+        type: string
+      - description: 주문자 폰번호
+        in: path
+        name: OrdererPhone
+        type: integer
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/controller.Controller'
+            $ref: '#/definitions/controller.OrdererMenuLink'
       summary: call ChangeOrder, return ok by json.
   /oos/order/createReview:
     post:
@@ -32,9 +116,24 @@ paths:
       - application/json
       description: CreateReview 리뷰 등록 - 주문자
       parameters:
-      - description: User name
+      - description: 메뉴이름
         in: path
-        name: name
+        name: MenuName
+        required: true
+        type: string
+      - description: 주문자 ID
+        in: path
+        name: OrdererID
+        required: true
+        type: string
+      - description: 후기
+        in: path
+        name: OrderComment
+        required: true
+        type: string
+      - description: 평점
+        in: path
+        name: OrderStarGrade
         required: true
         type: string
       produces:
@@ -43,7 +142,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/controller.Controller'
+            $ref: '#/definitions/controller.OrdererMenuLink'
       summary: call CreateReview, return ok by json.
   /oos/order/newOrder:
     post:
@@ -51,18 +150,41 @@ paths:
       - application/json
       description: NewOrder 주문 등록 - 주문자
       parameters:
-      - description: User name
+      - description: 메뉴이름
         in: path
-        name: name
+        name: MenuName
         required: true
         type: string
+      - description: 주문자 ID
+        in: path
+        name: OrdererID
+        required: true
+        type: string
+      - description: 주문 상태
+        enum:
+        - 준비중
+        - 주문취소
+        - 배달중
+        - 배달완료
+        in: path
+        name: OrderStatus
+        required: true
+        type: string
+      - description: 주문자 주소
+        in: path
+        name: OrdererAddress
+        type: string
+      - description: 주문자 폰번호
+        in: path
+        name: OrdererPhone
+        type: integer
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/controller.Controller'
+            $ref: '#/definitions/controller.OrdererMenuLink'
       summary: call NewOrder, return ok by json.
   /oos/order/searchMenu:
     post:
@@ -70,18 +192,65 @@ paths:
       - application/json
       description: SearchMenu 메뉴 검색 - 주문자, 피주문자
       parameters:
-      - description: User name
+      - description: 메뉴이름
         in: path
-        name: name
+        name: MenuName
         required: true
         type: string
+      - description: 가격
+        in: path
+        name: Price
+        required: true
+        type: integer
+      - description: 원산지
+        enum:
+        - 한국
+        - 일본
+        - 중국
+        in: path
+        name: CountryOf
+        required: true
+        type: string
+      - description: 메뉴 카테고리
+        enum:
+        - 한식
+        - 일식
+        - 중식
+        in: path
+        name: Category
+        required: true
+        type: string
+      - description: 주문 가능 상태
+        enum:
+        - 준비중
+        - 판매중
+        in: path
+        name: Status
+        required: true
+        type: string
+      - description: 맵기
+        enum:
+        - 아주매움
+        - 매움
+        - 보통
+        - 순한맛
+        in: path
+        name: Spicy
+        required: true
+        type: string
+      - description: 오늘의 추천메뉴 여부
+        in: path
+        name: TodayMenu
+        type: boolean
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/controller.Controller'
+            items:
+              $ref: '#/definitions/controller.Menu'
+            type: array
       summary: call SearchMenu, return ok by json.
   /oos/order/searchOrder:
     post:
@@ -89,9 +258,19 @@ paths:
       - application/json
       description: SearchOrder 주문 내역 조회 기능 - 주문자
       parameters:
-      - description: User name
+      - description: 메뉴이름
         in: path
-        name: name
+        name: MenuName
+        required: true
+        type: string
+      - description: 주문 상태
+        enum:
+        - 준비중
+        - 주문취소
+        - 배달중
+        - 배달완료
+        in: path
+        name: OrderStatus
         required: true
         type: string
       produces:
@@ -100,7 +279,9 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/controller.Controller'
+            items:
+              $ref: '#/definitions/controller.OrdererMenuLink'
+            type: array
       summary: call SearchOrder, return ok by json.
   /oos/order/viewMenu:
     post:
@@ -108,9 +289,9 @@ paths:
       - application/json
       description: ViewMenu 메뉴 상세 - 주문자, 피주문자
       parameters:
-      - description: User name
+      - description: 메뉴이름
         in: path
-        name: name
+        name: MenuName
         required: true
         type: string
       produces:
@@ -119,82 +300,211 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/controller.Controller'
+            $ref: '#/definitions/controller.Menu'
       summary: call ViewMenu, return ok by json.
+  /oos/seller/OrderStatus:
+    post:
+      consumes:
+      - application/json
+      description: OrderStatus 주문 내역 조회 - 피주문자
+      parameters:
+      - description: 메뉴이름
+        in: path
+        name: MenuName
+        required: true
+        type: string
+      - description: 주문 상태
+        enum:
+        - 준비중
+        - 주문취소
+        - 배달중
+        - 배달완료
+        in: path
+        name: OrderStatus
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/controller.OrdererMenuLink'
+            type: array
+      summary: call OrderStatus, return ok by json.
   /oos/seller/createMenu:
     post:
       consumes:
       - application/json
       description: CreateMenu 메뉴 등록 - 피주문자
       parameters:
-      - description: User name
+      - description: 메뉴이름
         in: path
-        name: name
+        name: MenuName
         required: true
         type: string
+      - description: 가격
+        in: path
+        name: Price
+        required: true
+        type: integer
+      - description: 원산지
+        enum:
+        - 한국
+        - 일본
+        - 중국
+        in: path
+        name: CountryOf
+        required: true
+        type: string
+      - description: 메뉴 카테고리
+        enum:
+        - 한식
+        - 일식
+        - 중식
+        in: path
+        name: Category
+        required: true
+        type: string
+      - description: 주문 가능 상태
+        enum:
+        - 준비중
+        - 판매중
+        in: path
+        name: Status
+        required: true
+        type: string
+      - description: 판매 가능 갯수
+        in: path
+        name: MaxCount
+        required: true
+        type: integer
+      - description: 맵기
+        enum:
+        - 아주매움
+        - 매움
+        - 보통
+        - 순한맛
+        in: path
+        name: Spicy
+        required: true
+        type: string
+      - default: true
+        description: 판매여부
+        in: path
+        name: IsDisabled
+        required: true
+        type: boolean
+      - default: false
+        description: 오늘의 추천메뉴 여부
+        in: path
+        name: TodayMenu
+        type: boolean
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/controller.Controller'
+            $ref: '#/definitions/controller.Menu'
       summary: call CreateMenu, return ok by json.
   /oos/seller/deleteMenu:
-    post:
+    put:
       consumes:
       - application/json
       description: DeleteMenu 메뉴 삭제 - 피주문자
       parameters:
-      - description: User name
+      - description: 메뉴이름
         in: path
-        name: name
+        name: MenuName
         required: true
         type: string
+      - description: 판매여부
+        in: path
+        name: IsDisabled
+        required: true
+        type: boolean
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/controller.Controller'
+            $ref: '#/definitions/controller.Menu'
       summary: call DeleteMenu, return ok by json.
-  /oos/seller/orderStates:
-    post:
-      consumes:
-      - application/json
-      description: OrderStates 주문 내역 조회 - 피주문자
-      parameters:
-      - description: User name
-        in: path
-        name: name
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/controller.Controller'
-      summary: call OrderStates, return ok by json.
   /oos/seller/updateMenu:
     post:
       consumes:
       - application/json
       description: UpdateMenu 메뉴 수정 - 피주문자
       parameters:
-      - description: User name
+      - description: 메뉴이름
         in: path
-        name: name
+        name: MenuName
         required: true
         type: string
+      - description: 가격
+        in: path
+        name: Price
+        required: true
+        type: integer
+      - description: 원산지
+        enum:
+        - 한국
+        - 일본
+        - 중국
+        in: path
+        name: CountryOf
+        required: true
+        type: string
+      - description: 메뉴 카테고리
+        enum:
+        - 한식
+        - 일식
+        - 중식
+        in: path
+        name: Category
+        required: true
+        type: string
+      - description: 주문 가능 상태
+        enum:
+        - 준비중
+        - 판매중
+        in: path
+        name: Status
+        required: true
+        type: string
+      - description: 판매 가능 갯수
+        in: path
+        name: MaxCount
+        required: true
+        type: integer
+      - description: 맵기
+        enum:
+        - 아주매움
+        - 매움
+        - 보통
+        - 순한맛
+        in: path
+        name: Spicy
+        required: true
+        type: string
+      - description: 판매여부
+        in: path
+        name: IsDisabled
+        required: true
+        type: boolean
+      - description: 오늘의 추천메뉴 여부
+        in: path
+        name: TodayMenu
+        type: boolean
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/controller.Controller'
+            $ref: '#/definitions/controller.Menu'
       summary: call UpdateMenu, return ok by json.
 swagger: "2.0"
